--- a/BluetoothAudio.lbaction/Contents/Info.plist
+++ b/BluetoothAudio.lbaction/Contents/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleName</key>
 	<string>Bluetooth Audio</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.1.1</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.agonia.bluetoothaudio</string>
+	<string>com.inspira.bluetoothaudio</string>
 	<key>CFBundleIconFile</key>
 	<string>/System/Library/PreferencePanes/Bluetooth.prefPane/Contents/Resources/AppIcon.icns</string>
 	<key>LBDebugLogEnabled</key>
@@ -39,11 +39,17 @@
 		<key>LBSummary</key>
 		<string>Connect a paired Bluetooth Audio device and switch system audio output. Press Alt-Key to disconnect device.</string>
 		<key>LBWebsite</key>
-		<string>https://github.com/atika</string>
+		<string>https://github.com/atika/LaunchBar-Actions</string>
 		<key>LBTwitter</key>
 		<string>@domadp</string>
 		<key>LBRequirements</key>
 		<string>https://github.com/deweller/switchaudio-osx</string>
+		<key>LBUpdateURL</key>
+		<string>https://raw.githubusercontent.com/atika/LaunchBar-Actions/master/BluetoothAudio.lbaction/Contents/Info.plist</string>
+		<key>LBDownloadURL</key>
+		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/BluetoothAudio.lbaction</string>
+		<key>LBChangelog</key>
+		<string></string>
 	</dict>
 </dict>
 </plist>
