--- a/ProxySwitch.lbaction/Contents/Info.plist
+++ b/ProxySwitch.lbaction/Contents/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleName</key>
 	<string>Proxy Switch</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.agonia.proxyswitch</string>
+	<string>com.inspira.proxyswitch</string>
 	<key>CFBundleIconFile</key>
 	<string>ProxyTemplate@2x.png</string>
 	<key>LBDebugLogEnabled</key>
@@ -41,9 +41,15 @@
 		<key>LBSummary</key>
 		<string>Switch to a user defined Proxy and display network proxies status. Define your list on &quot;Action Support &gt; UserProxy.json&quot;. Interface: Ethernet. Proxy type: web, https, ftp, socks. Press Alt-Key to show Support Folder.</string>
 		<key>LBWebsite</key>
-		<string>https://github.com/atika</string>
+		<string>https://github.com/atika/LaunchBar-Actions</string>
 		<key>LBTwitter</key>
 		<string>@domadp</string>
+		<key>LBUpdateURL</key>
+		<string>https://raw.githubusercontent.com/atika/LaunchBar-Actions/master/ProxySwitch.lbaction/Contents/Info.plist</string>
+		<key>LBDownloadURL</key>
+		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/ProxySwitch.lbaction</string>
+		<key>LBChangelog</key>
+		<string></string>
 	</dict>
 </dict>
 </plist>
