--- a/Knock.lbaction/Contents/Info.plist
+++ b/Knock.lbaction/Contents/Info.plist
@@ -2,52 +2,52 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconFile</key>
+	<string>closed61Template@2x.png</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.inspira.knock</string>
 	<key>CFBundleName</key>
 	<string>Knock</string>
 	<key>CFBundleVersion</key>
-	<string>1.1.1</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.inspira.knock</string>
-	<key>CFBundleIconFile</key>
-	<string>closed61Template@2x.png</string>
+	<string>1.1.2</string>
 	<key>LBDebugLogEnabled</key>
 	<true/>
-	<key>LBTextInputTitle</key>
-	<string>Select an Option</string>
+	<key>LBDescription</key>
+	<dict>
+		<key>LBAuthor</key>
+		<string>Dominique Da Silva</string>
+		<key>LBChangelog</key>
+		<string></string>
+		<key>LBDownloadURL</key>
+		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/Knock.lbaction</string>
+		<key>LBRequirements</key>
+		<string>Knock from http://www.zeroflux.org/projects/knock. Install with Brew.</string>
+		<key>LBSummary</key>
+		<string>Knock your server from LaunchBar.</string>
+		<key>LBTwitter</key>
+		<string>@domadp</string>
+		<key>LBUpdateURL</key>
+		<string>https://raw.githubusercontent.com/atika/launchbar/master/Knock.lbaction/Contents/Info.plist</string>
+		<key>LBWebsite</key>
+		<string>https://github.com/atika/launchbar</string>
+	</dict>
 	<key>LBScripts</key>
 	<dict>
 		<key>LBDefaultScript</key>
 		<dict>
-			<key>LBScriptName</key>
-			<string>KnockPort.rb</string>
-			<key>LBRequiresArgument</key>
-			<false/>
 			<key>LBLiveFeedbackEnabled</key>
 			<false/>
-			<key>LBRunInBackground</key>
+			<key>LBRequiresArgument</key>
 			<false/>
 			<key>LBReturnsResult</key>
 			<true/>
+			<key>LBRunInBackground</key>
+			<false/>
+			<key>LBScriptName</key>
+			<string>KnockPort.rb</string>
 		</dict>
 	</dict>
-	<key>LBDescription</key>
-	<dict>
-		<key>LBRequirements</key>
-		<string>Knock from http://www.zeroflux.org/projects/knock. Install with Brew.</string>
-		<key>LBAuthor</key>
-		<string>Dominique Da Silva</string>
-		<key>LBSummary</key>
-		<string>Knock your server from LaunchBar.</string>
-		<key>LBWebsite</key>
-		<string>https://github.com/atika/LaunchBar-Actions</string>
-		<key>LBTwitter</key>
-		<string>@domadp</string>
-		<key>LBUpdateURL</key>
-		<string>https://raw.githubusercontent.com/atika/LaunchBar-Actions/master/Knock.lbaction/Contents/Info.plist</string>
-		<key>LBDownloadURL</key>
-		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/Knock.lbaction</string>
-		<key>LBChangelog</key>
-		<string></string>
-	</dict>
+	<key>LBTextInputTitle</key>
+	<string>Select an Option</string>
 </dict>
 </plist>
