New action App Bundle ID

--- a/AppBundleID.lbaction/Contents/Info.plist
+++ b/AppBundleID.lbaction/Contents/Info.plist
@@ -3,47 +3,38 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIconFile</key>
-	<string>AppIcon.icns</string>
+	<string>BundleIDIconTemplate.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.inspira.SendToCopied</string>
+	<string>com.inspira.AppBundleID</string>
 	<key>CFBundleName</key>
-	<string>Send to Copied</string>
+	<string>App Bundle ID</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.0</string>
 	<key>LBAbbreviation</key>
-	<string>cp, copied</string>
-	<key>LBAssociatedApplication</key>
-	<string>com.udoncode.copiedmac</string>
+	<string>bundle</string>
 	<key>LBDescription</key>
 	<dict>
 		<key>LBAuthor</key>
 		<string>Dominique Da Silva</string>
 		<key>LBDownloadURL</key>
-		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/SendToCopied.lbaction</string>
+		<string>https://dl.dropboxusercontent.com/u/24409293/LaunchBar/SearchSnippetsLab.lbaction</string>
 		<key>LBEmail</key>
 		<string></string>
-		<key>LBRequirements</key>
-		<string>Require Copied for Mac.</string>
 		<key>LBSummary</key>
-		<string>Send text or image to Copied (copiedapp.com).</string>
+		<string>Get the bundle identifier of an application.</string>
 		<key>LBTwitter</key>
 		<string>@domadp</string>
 		<key>LBUpdateURL</key>
-		<string>https://raw.githubusercontent.com/atika/launchbar/master/SendToCopied.lbaction/Contents/Info.plist</string>
-		<key>LBWebsite</key>
+		<string>https://raw.githubusercontent.com/atika/launchbar/master/AppBundleID.lbaction/Contents/Info.plist</string>
+		<key>LBWebsiteURL</key>
 		<string>https://github.com/atika/launchbar</string>
 	</dict>
-	<key>LBRequiredApplication</key>
-	<string>com.udoncode.copiedmac</string>
-	<key>LBRequirements</key>
-	<string>Require Copied for Mac.</string>
 	<key>LBScripts</key>
 	<dict>
 		<key>LBDefaultScript</key>
 		<dict>
 			<key>LBAcceptedArgumentTypes</key>
 			<array>
-				<string>string</string>
 				<string>path</string>
 			</array>
 			<key>LBKeepWindowActive</key>
@@ -55,14 +46,8 @@
 			<key>LBReturnsResult</key>
 			<true/>
 			<key>LBScriptName</key>
-			<string>copied.rb</string>
+			<string>default.rb</string>
 		</dict>
 	</dict>
-	<key>LBTextInputTitle</key>
-	<string>Send to copied</string>
-	<key>LBWebsite</key>
-	<string>https://github.com/atika/launchbar</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Dominique Da Silva</string>
 </dict>
 </plist>
